<resources>
    <string name="app_name">Yellow Quest</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="canvas_view">Canvas View</string>
    <string name="empty">Empty</string>
    <string name="desc_here">Description goes here</string>
    <string name="hide">Hide</string>
    <string name="img_here">Image Here</string>
    <string name="play">Play</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="leaderboard_scores">Hiscores Leaderboard</string>
    <string name="leaderboard_ranks">Ranks Leaderboard</string>
    <string name="leaderboard_shadowtime">ShadowTime Leaderboard</string>
    <string name="hiscores">Hiscores</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="sign_out">Sign Out</string>
    <string name="gameover_time">GameOver Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cant_view_achievements">Can\'t view achievements</string>
    <string name="cant_connect_to_google">Can\'t connect to Google Play. Are you connected to the internet and signed in to your google account?</string>
    <string name="shadow_mode">Shadow mode</string>
    <string name="time_mode">Time mode</string>
    <string name="hiscore_x">Hiscore: {0}</string>
    <string name="previous_x">Previous: {0}</string>
    <string name="start_on_level">Start on level:</string>
    <string name="level_x">Level {0}</string>
    <string name="hiscore_x_previous_y">Rank: {2} Hiscore: {0} Previous: {1}</string>
    <string name="shadow">Shadow</string>
    <string name="time">Time</string>
    <string name="ach">Ach</string>
    <string name="lbs">LBs</string>
    <string name="prefs">prefs</string>
    <string name="buy">Buy</string>
    <string name="upgrade">Upgrade</string>
    <string name="powers">Powers</string>
    <string name="upgrades">Upgrades</string>
    <string name="powers_and_upgrades">Powers and Upgrades</string>
    <string name="not_enough">You don\'t have enough Score Points!\nPlay more games or buy more by pressing the Score Point counter!</string>
    <string name="buy_more_scorepoints">Buy More Score Points</string>
    <string name="buy_success">Success! {0} Score points have been added to your total!</string>
    <string name="buy_failure">Failed. No score points have been purchased.</string>
    <string name="error_getting_purchase_details">Error getting in-app purchase details</string>
    <string name="full_size_left_button">Full size left button</string>
    <string name="power_bounce">Bounce {0}</string>
    <string name="power_bounce_desc">Makes you bounce off platforms</string>
    <string name="power_bounce_upgrade">Upgrade: Makes you move bounce higher off platforms</string>
    <string name="power_troll">Backwards {0}</string>
    <string name="power_troll_desc">Makes levels right to left</string>
    <string name="power_troll_upgrade">Upgrade: Enables toggling between backwards and normal</string>
    <string name="power_bounce_warn">Upgrade bounce power to level {0}?</string>
    <string name="power_troll_warn">Upgrade backwards power to level {0}?</string>
    <string name="power_teleport">Teleport {0}</string>
    <string name="power_teleport_desc">Allows a teleport to the next box, with a cooldown</string>
    <string name="power_teleport_upgrade">Upgrade: Decreases the cooldown between teleporting by 40 seconds</string>
    <string name="power_teleport_warn">Upgrade teleport power to level {0}?</string>
    <string name="power_up">Upwards {0}</string>
    <string name="power_up_desc">Makes all boxes move upwards when landed on</string>
    <string name="power_up_upgrade">Upgrade: Increases the speed that boxes move upwards</string>
    <string name="power_up_warn">Upgrade upwards power to level {0}?</string>
    <string name="power_time">Time Stop {0}</string>
    <string name="power_time_desc">Allows the timer to be stopped for 3 seconds</string>
    <string name="power_time_upgrade">Upgrade: Increases the time stopped by 3 seconds and decreases the cooldown by 10 seconds</string>
    <string name="power_time_warn">Upgrade time stop power to level {0}?</string>
    <string name="power_life">Extra Life {0}</string>
    <string name="power_life_desc">Increases the number of lives you have</string>
    <string name="power_life_upgrade">Upgrade: Adds 1 extra life per level</string>
    <string name="power_life_warn">Upgrade extra life power to level {0}?</string>
    <string name="power_life_unlock">You have passed level 5! You have learned the secrets of extra lives!</string>
    <string name="power_bounce_unlock">Finding a bouncy platform has led you to discover bounciness!</string>
    <string name="power_troll_unlock">Finding a troll platform has revealed the secrets of going left!</string>
    <string name="power_teleport_unlock">Finding a conveyor platform has made you consider teleporting!</string>
    <string name="power_up_unlock">Using a green platform has made you realise the secrets of rising up!</string>
    <string name="power_time_unlock">Using time mode has made you realise you need to stop time!</string>
    <string name="power_doublejump_unlock">The secret of doublejumping has been revealed!</string>
    <string name="power_stick_unlock">The sticky platform has gifted its powers to you!</string>
    <string name="power_doublejump_upgrade">Upgrade: Merges the doublejump button with the jump button</string>
    <string name="power_stick_upgrade">Upgrade? You cannot upgrade the sticky power!</string>
    <string name="power_doublejump_warn">Upgrade doublejump power to level {0}?</string>
    <string name="power_stick_warn">You try to upgrade the sticky power, but it cannot be upgraded</string>
    <string name="power_doublejump">Double Jump {0}</string>
    <string name="power_stick">Sticky</string>
    <string name="power_doublejump_desc">Allows a second jump in midair</string>
    <string name="power_stick_desc">Allows you to stick to the side and bottom of platforms</string>
    <string name="tip_empty">There should be a tip here. Where is it?</string>
    <string name="tip_modes">Have you tried the buttons at the top right yet?</string>
    <string name="tip_powers">There are six powers to unlock. Can you unlock them all?</string>
    <string name="tip_rate">Have you rated the app yet? We would love to hear what you have to say about it!</string>
    <string name="tip_hiscores">Ranks have their own hiscores, so you can compare your rank to others!</string>
    <string name="tip_weekly">Can\'t get the overall hiscore? Try for the daily or weekly one!</string>
    <string name="shadow_off">Shadow mode disabled</string>
    <string name="shadow_on">Shadow mode enabled</string>
    <string name="time_off">Timer challenge mode disabled</string>
    <string name="time_on">Timer challenge mode enabled</string>
    <string name="enable_tips">Enable tips</string>
    <string name="hiscore_beat">Unbelievable! You beat your hiscore! Your new record is {0}</string>
    <string name="achievement_reward">You have been rewarded {0} SP!</string>
    <string name="powers_view_unlock">You have passed level 1! You have unlocked the powers menu!</string>
    <string name="no_powers">You have not unlocked any powers yet. Go forth and unlock them!</string>
    <string name="reset">Reset Progress</string>
    <string name="reset_confirm">After you reset your progress you have to start again. You will lose all your Score Points and your unlocked Powers. Do you want to continue?</string>
    <string name="rate_message">If you enjoy using YellowQuest, please take a moment to rate the app. Thank you for your support!</string>
    <string name="rate_title">Rate YellowQuest</string>
    <string name="rate_positive">Rate Now</string>
    <string name="rate_negative">No, thanks</string>
    <string name="rate_neutral">Later</string>
    <string name="no_purchase_without_internet">You cannot access in app purchases without an internet connection</string>
    <string name="tap_anywhere_to_play">Tap anywhere to start playing</string>
    <string name="ach_icon">Achievement icon</string>
    <string name="ach_reward">+ {0} SP</string>
    <string name="score_reward">+ {0} score</string>
    <string name="level_select">Level</string>
    <string name="scorepoints_subtracted">{0} SP subtracted</string>
    <string name="achievement_easy_name">Easy</string>
    <string name="achievement_medium_name">Medium</string>
    <string name="achievement_hard_name">Hard</string>
    <string name="achievement_expert_name">Expert</string>
    <string name="achievement_impossible_name">Impossible</string>
    <string name="achievement_big_failure_name">Big Failure</string>
    <string name="achievement_almost_name">Almost</string>
    <string name="achievement_overshot_name">Overshot</string>
    <string name="achievement_jumpman_name">Jumpman</string>
    <string name="achievement_bonus_time_name">Bonus Time</string>
    <string name="achievement_up_up_away_name">Up, up and away</string>
    <string name="achievement_sacrifice_name">Sacrifice</string>
    <string name="achievement_bounceback_name">BounceBack</string>
    <string name="achievement_wormhole_name">Wormhole</string>
    <string name="achievement_frozen_time_name">Frozen Time</string>
    <string name="achievement_arrows_name">Arrows</string>
    <string name="achievement_upgrade_name">Time for an upgrade!</string>
    <string name="achievement_unlocker_name">The Unlocker</string>
    <string name="achievement_omnipotent_name">Omnipotent</string>
    <string name="achievement_headstart_name">Headstart</string>
    <string name="achievement_fall_breaking_jump_name">Fall-breaking Jump</string>
    <string name="achievement_rising_bat_name">Rising Bat</string>
    <string name="achievement_bonus_exploiter_name">Bonus Exploiter</string>
    <string name="achievement_easy_desc">Complete level 3</string>
    <string name="achievement_medium_desc">Complete level 6</string>
    <string name="achievement_hard_desc">Complete level 9</string>
    <string name="achievement_expert_desc">Complete level 12</string>
    <string name="achievement_impossible_desc">Complete level 15</string>
    <string name="achievement_big_failure_desc">Fail to reach the second box on level 1</string>
    <string name="achievement_almost_desc">Fail to land on the flag box</string>
    <string name="achievement_overshot_desc">Collide with the right side of the flag box</string>
    <string name="achievement_jumpman_desc">Jump over 3 platforms and land it</string>
    <string name="achievement_bonus_time_desc">Complete a bonus area</string>
    <string name="achievement_up_up_away_desc">Access a bonus area using the up power</string>
    <string name="achievement_sacrifice_desc">Access a bonus area using the extra life power</string>
    <string name="achievement_bounceback_desc">Access a bonus area using the bounce power</string>
    <string name="achievement_wormhole_desc">Access a bonus area using the teleport power</string>
    <string name="achievement_frozen_time_desc">Access a bonus area using the time stop power</string>
    <string name="achievement_arrows_desc">Access a bonus area using the upgraded backwards power</string>
    <string name="achievement_upgrade_desc">Upgrade a power</string>
    <string name="achievement_unlocker_desc">Unlock 4 powers</string>
    <string name="achievement_omnipotent_desc">Unlock all 8 powers</string>
    <string name="achievement_headstart_desc">Start a game on level 2 or above</string>
    <string name="old_hiscore">That\'s an increase of {0} on your old hiscore of {1}!</string>
    <string name="skip_cost">Skip ({0} SP)</string>
</resources>