<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dp"
    android:background="@color/black"
    android:id="@+id/hiscores">
    
    <TextView 
        android:id="@+id/hiscores_title"
        android:text="@string/leaderboards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        style="@style/RelFont"/>

    <LinearLayout 
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        
        <Button 
            android:id="@+id/hiscores_score"
            android:text="@string/leaderboard_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
        <Button
            android:id="@+id/hiscores_rank"
            android:text="@string/leaderboard_ranks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>

    <Button
        android:id="@+id/hiscores_back"
        style="@style/RelFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:minHeight="50dp"
        android:text="@string/back" />

</RelativeLayout>