<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/power"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_margin="5dp"
    android:background="@color/black" >

    <ImageView
        android:id="@+id/achievement_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/ach_icon"/>

    <TextView
        android:id="@+id/achievement_name"
        style="@style/RelSmall"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/achievement_icon"
        android:layout_toRightOf="@+id/achievement_icon"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/achievement_desc"
        style="@style/RelSmaller"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/achievement_icon"
        android:layout_toRightOf="@+id/achievement_icon"
        android:text="@string/desc_here" />
    
    <TextView
        android:id="@+id/achievement_reward"
        style="@style/RelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/ach_reward" />

</RelativeLayout>