<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="5dp"
    android:background="@color/black"
    android:id="@+id/tip" >
    
    <ImageView
        android:id="@+id/tip_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/img_here"
        android:src="@drawable/info" />
    
    <TextView 
        android:id="@+id/tip_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tip_icon"
        android:layout_toEndOf="@+id/tip_icon"
        android:text="@string/tip_empty"
        style="@style/RelSmall"/>
    
    <Button
        android:id="@+id/tip_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/hide"/>

</RelativeLayout>